next version - not yet released
==============================
NEW    : Ticket #372, Add the ability of resetting MPC-HC to its default settings using
         either a new button in "Misc" option page or "/reset" command line option.
         Be careful, when using this feature ALL your current settings will be lost.
FIXED  : Ticket #311, High dpi awareness
FIXED  : Ticket #1552, Fix the DVD angle display in the information panel (Ctrl+3)
FIXED  : Ticket #1553, Fix display for DVD tracks without language information:
         the tracks were incorrectly numbered in the menu and the current OS
         language was displayed instead of "Unknown" in the informations panel
         and OSD messages
FIXED  : Ticket #1555/#1560, Improve OSD for DVD playback: simplify some messages
         and try to be consistent with the information panel
FIXED  : Ticket #1559, Problem with Win7 Taskbar Preview
FIXED  : Ticket #1587, aac file played on mpc-hc 1.3.1249.0 and doesn't play on 1.5.2.3456


v1.5.2.3456 - 22 July 2011
==============================
NEW    : Added optional fp32 (full float point) processing, fp16 is now half float point
NEW    : Support for BluRay chapters
NEW    : Added Hebrew translation (beta version, the right-to-left layout is not applied
         to all dialogs yet)
NEW    : You can switch between the remaining time and the current time by clicking on the
         time itself on the toolbar
NEW    : Ticket #29, Added an option to make the player on top only when playing
         video files. When using this option, the player won't be on top when
         playing an audio-only file
NEW    : Ticket #1216, Added a "Clear" option to the playlist context menu
NEW    : Ticket #1224, Added OSD messages when changing the audio boost and the audio balance
NEW    : Ticket #1311, Added an "After Playback" => "Lock" option
NEW    : Ticket #1350, Added a time tooltip for the seek bar whose position can be specified
         (above or below the seekbar)